# fancy-openclaw-linear-connector

./: .bandit  .dockerignore  .env.example  .gitignore  .grover-ai-2204-verify.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASES.md  SECURITY.md  capability-policy.yaml  commit-msg.txt  docker-compose.yml  jest.config.js  jest.config.ts  jest.setup.ts  linear-webhook-fancymatt.service  linear-webhook-ill.service  nginx-webhook-proxy.conf  oauth-apps.json.example  openclaw-ill.sh  openclaw-local.sh  package-lock.json  package.json  pytest.ini  run-inf-71-fix.mjs  tsconfig.json  ui-audit.yaml
.github/: pull_request_template.md
apps/mam-downloader/: .gitignore  Dockerfile  KNOWN_LIMITATIONS.md  README.md  docker-compose.yml  pyproject.toml
apps/mam-downloader/src/mam_downloader/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  router.py
apps/mam-downloader/src/mam_downloader/services/: abs.py  download_manager.py  mam.py  qbittorrent.py
apps/mam-downloader/tests/: conftest.py  test_api.py  test_cli.py  test_download.py  test_search.py  test_security_scanners.py
config/: connector.example.yaml  department-roster.yaml
docs/: ai-2207-capability-policy-additions.md  alert-bus.md  architecture.md  configuration.md  connector-skill-split.md  deployment.md  escape-and-rewind.md  logging.md  management-console.md  normalized-event-schema.md  observations.md  openclaw-delivery-adapter.md  operational-persistence.md
scripts/: check-duplicate-json-keys.js  check-gate.sh  connector-reftxn-arm.sh  guard-build-location.js  verify-push.sh  (+10 more)
(+643 files in other folders)
